--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -71,9 +71,9 @@ body.open-mobile-menu {
     span {
       display: block;
       min-width: 20px;
-      width: 20px;
-      height: 20px;
-      background-size: contain;
+      width: 26px;
+      height: 26px;
+      background-size: 20px;
       background-repeat: no-repeat;
       background-position: center;
       transition: 0.3s ease;
@@ -87,9 +87,9 @@ body.open-mobile-menu {
     span {
       display: block;
       min-width: 20px;
-      width: 20px;
-      height: 20px;
-      background-size: contain;
+      width: 26px;
+      height: 26px;
+      background-size: 20px;
       background-repeat: no-repeat;
       background-position: center;
       transition: 0.3s ease;
