--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Mulish;
-  font-display: swap;
+  //font-display: swap;
   src: url("../fonts/Mulish-Black.woff2") format("woff2"), url("../fonts/Mulish-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: Mulish;
-  font-display: swap;
+  //font-display: swap;
   src: url("../fonts/Mulish-Bold.woff2") format("woff2"), url("../fonts/Mulish-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: Mulish;
-  font-display: swap;
+  //font-display: swap;
   src: url("../fonts/Mulish-Regular.woff2") format("woff2"), url("../fonts/Mulish-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
